adding spark #1